apps/base/seaweedfs/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seaweedfs-s3
  namespace: seaweedfs
spec:
  parentRefs:
    - name: amajor-cloud-gateway
      namespace: envoy-gateway-system
  hostnames:
    - s3.amajor.cloud
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: seaweedfs-s3
          port: 8333
